--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,26 @@
 language: php
+sudo: required
 php:
+  - 5.5
   - 5.6
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+
+before_script:
+- composer install
 
 script:
-  - phpunit --configuration tests/phpunit.xml
-  - ./bin/phpcs -p --standard=tests/phpcs/ruleset.xml lib/
+  - ./bin/phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
 
-before_script: composer install
+after_success:
+- bash <(curl -s https://codecov.io/bash)
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+matrix:
+  allow_failures:
+    - php: 5.5
