--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sabre/vobject",
+    "name": "tine20/sabrevobject",
     "description" : "The VObject library for PHP allows you to easily parse and manipulate iCalendar and vCard objects",
     "keywords" : [
         "iCalendar",
